# c-cpp-example

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  README.md  cifuzz.yaml  fuzz_test.cpp  lcov.info  mocks.cpp
.cifuzz-findings/awesome_gnu/: crashing-input  finding.json
.cifuzz-findings/philosophical_capybara/: crashing-input  finding.json
.cifuzz-findings/predictive_ant/: crashing-input  finding.json
.cifuzz-findings/unruffled_labrador/: finding.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: fuzzing.yaml
.github/workflows/: fuzzing.yaml  main.yaml
fuzzing/auto-mock-fuzz/: gen_tests.py  get_source_context.py
fuzzing/auto-mock-fuzz/gen_template/: gen_template.py
module_fuzzer_inputs/: understanding_toucan-crash-8864ba261e264c1bd0831574884f8024c176ff47  zealous_mallard-crash-292147221d5a3ef4ff009e22b0be0dd2dfca50f4
modules/GPS_module/src/: GPS_module_1.c  GPS_module_1.h  GPS_module_types.h
modules/crypto_module/src/: crypto_module_1.c  crypto_module_1.h  crypto_module_2.c  crypto_module_2.h
modules/example_module/src/buffer_copy/: buffer_copy.h
modules/example_module/src/complex_function/: bit_shifts.c  bit_shifts.h
modules/example_module/src/complex_function/base64/: base64_encoder.c  base64_encoder.h
modules/example_module/src/complex_function/base64/helpers/: base64.c  base64.h
modules/example_module/src/complex_function/bit_shift/: bit_shifts.c  bit_shifts.h
modules/example_module/src/complex_function/sha256/: sha256_encoder.c  sha256_encoder.h
modules/example_module/src/complex_function/sha256/helpers/: sha256.c  sha256.h
modules/example_module/src/person/: person.c  person.h
modules/key_management_module/src/: key_management_module_1.c  key_management_module_1.h
modules/simple_module/src/: stack_buffer_overflow.cpp  stack_buffer_overflow.h
modules/simple_module/src/buffer_copy/: buffer_copy.c
modules/simple_module/src/person/: person.c  person.h
modules/time_module/src/: time_module_1.c
src/advanced_examples/: CMakeLists.txt  custom_mutator_example_checks_test.cpp  explore_me.cpp  explore_me.h  mutator_data.proto  protobuf_mutator_example_fuzz_test.cpp  slow_input_checks_test.cpp  structured_input_checks_test.cpp
src/automotive/: CMakeLists.txt  fuzz_test.cpp  mocks.cpp
src/automotive/crypto/: crypto_1.c  crypto_1.h  crypto_2.c  crypto_2.h  crypto_types.h
src/automotive/gps/: gps_1.c  gps_1.h  gps_types.h
src/automotive/key_management/: key_management_1.c  key_management_1.h  key_management_types.h
src/automotive/time/: time_1.c  time_1.h
src/complex_test_fixture/: CMakeLists.txt
src/complex_test_fixture/base/: Activity.cpp  Activity.h  CMakeLists.txt
src/complex_test_fixture/child/: CMakeLists.txt  ChildActivity.cpp  ChildActivity.h
src/complex_test_fixture/metrics/: CMakeLists.txt  metric.h  metricA.cpp  metricA.h  metricB.cpp  metricB.h
src/complex_test_fixture/publishers/: CMakeLists.txt  Publisher.h  PublisherA.cpp  PublisherA.h  PublisherB.cpp  PublisherB.h
src/complex_test_fixture/subscribers/: CMakeLists.txt  Subscriber.h  SubscriberA.cpp  SubscriberA.h
src/complex_test_fixture/test/: CMakeLists.txt  ChildActivityFixture.cpp  ChildActivityFixture.h  ChildActivityTest.cpp
src/cpp-inheritance/: CMakeLists.txt  main.cpp
src/cpp-inheritance/base/: CMakeLists.txt  data_processor.cpp  data_processor.h
src/cpp-inheritance/child/: CMakeLists.txt  upper_case_processor.cpp  upper_case_processor.h
src/explore_me/: CMakeLists.txt  complex_checks_test.cpp  custom_mutator_example_checks_test.cpp  explore_me.cpp  explore_me.h  simple_checks_test.cpp  structured_input_checks_test.cpp  utils.cpp  utils.h
src/explore_me/simple_checks_fuzz_test_inputs/: sweet_wasp-crash-42dc16c43254820c2b1b425486fe750fe3869896
src/simple_examples/: CMakeLists.txt  complex_checks_test.cpp  explore_me.cpp  explore_me.h  simple_checks_test.cpp
src/state_example/: CMakeLists.txt  fuzz_test.cpp
src/state_example/crypto/: crypto_types.h
src/state_example/gps/: gps_1.c
src/state_example/key_management/: key_management_1.c
src/state_example/time/: time_1.c
src/training/: CMakeLists.txt  explore_me.cpp  explore_me.h  function_one_test.cpp  function_three_test.cpp  function_two_test.cpp  utils.cpp  utils.h
test/: buffer_copy_fuzz_test.cpp  generated_fuzz_test.cpp  mocks.cpp  person_tests.cpp
test/buffer_copy/: buffer_copy_fuzz_test.cpp  buffer_copy_tests.cpp
test/complex_function/: bit_shift_fuzz_test.cpp
test/complex_function/base64/: base64_fuzz_test.cpp  base64_tests.cpp
test/complex_function/bit_shift/: bit_shift_fuzz_test.cpp  bit_shift_tests.cpp
test/complex_function/sha256/: sha256_fuzz_test.cpp  sha256_tests.cpp
test/person/: person_fuzz_test.cpp  person_tests.cpp
